# Deep-Research-Backend

./: .env.example  .gitignore  .gitmodules  AGENT.md  Dockerfile  Dockerfile.cn  docker-compose.cn.yml  docker-compose.yml  main.py  pyproject.toml
app/: worker_main.py
app/api/: deps.py  errors.py
app/api/routers/: admin.py  (+6 more)
app/config/: __init__.py  settings.py
app/database/: __init__.py  engine.py  session.py
app/models/: __init__.py  api_key.py  base.py  crawl_job.py  document.py
app/repositories/: api_key_repository.py  crawl_job_repository.py  document_repository.py
app/schemas/: admin.py  crawl.py  document.py  error.py  job.py  research.py
deploy/searxng/: settings.proxy.yml  settings.yml
docker/crawl4ai/: Dockerfile.cn  docker-entrypoint-proxy.sh  supervisord.conf
docker/searxng/: Dockerfile  Dockerfile.cn
docker/xray/: Dockerfile  Dockerfile.cn  entrypoint.py
docs/: API_GUIDE.md  ARCHITECTURE.md  BUILD.md  DEPLOYMENT-sean-EQ59.md  DEPLOYMENT.md  INTEGRATIONS.md  SPEC.md  nextsession.md
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_add_document_published_at.py  0003_add_api_key_status_and_expiry.py
scripts/: manage_api_keys.sh
tests/: conftest.py
tests/contract/: test_crawl4ai_provider.py  test_github_provider.py  test_reddit_provider.py  test_searxng_provider.py  test_truth_social_provider.py  test_weather_provider.py
tests/unit/: test_api_wiring.py  test_composite_provider.py  test_deps.py  test_normalize.py  test_research_service.py  test_ttl.py  test_url_guard.py  test_worker_loop.py  test_xray_entrypoint.py
(+22 files in other folders)
